; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonstreamsfile_stream.c_filestream_vprintf.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonstreamsfile_stream.c_filestream_vprintf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@filestream_vprintf.buffer = internal global [8192 x i8] zeroinitializer, align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @filestream_vprintf(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = call i64 @vsprintf(i8* getelementptr inbounds ([8192 x i8], [8192 x i8]* @filestream_vprintf.buffer, i64 0, i64 0), i8* %9, i32 %10)
  store i64 %11, i64* %8, align 8
  %12 = load i64, i64* %8, align 8
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %25

15:                                               ; preds = %3
  %16 = load i64, i64* %8, align 8
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 0, i32* %4, align 4
  br label %25

19:                                               ; preds = %15
  br label %20

20:                                               ; preds = %19
  %21 = load i32*, i32** %5, align 8
  %22 = load i64, i64* %8, align 8
  %23 = call i64 @filestream_write(i32* %21, i8* getelementptr inbounds ([8192 x i8], [8192 x i8]* @filestream_vprintf.buffer, i64 0, i64 0), i64 %22)
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %20, %18, %14
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i64 @vsprintf(i8*, i8*, i32) #1

declare dso_local i64 @filestream_write(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
